core: Added fragments of OpenWeatherMap API response